k8s/web-client/httproute-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-client-https
  namespace: atproto
spec:
  parentRefs:
    - name: web-client-gateway
      sectionName: https
  hostnames:
    - social.know-me.tools
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-client
          port: 3000
