k8s/web-client/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-client-http-redirect
  namespace: atproto
spec:
  parentRefs:
    - name: web-client-gateway
      sectionName: http
  hostnames:
    - social.know-me.tools
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
